2005-06-29  Don Allingham  <don@gramps-project.org>
	* src/GrampsDbBase.py: don't count_person for gender stats on 
	add_person, since already done it commit_person

2005-06-29  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/plugins/DumpGenderStats.py: New plugin for debugging

2005-06-29  Don Allingham  <don@gramps-project.org>
	* src/GrampsBSDDB.py: provide an upgrade task to rebuild gender stats
	* src/GrampsDbBase.py: move gender stats handling to the commit_person
	task, instead of trying to handle it in the Person() class
	* src/RelLib.py: removal of genderstats handling

2005-06-28  Don Allingham  <don@gramps-project.org>
	* src/EditPerson.py: parse date correctly on edit
	* src/ReadGedcom.py: load previously used title properly into
	the dictionary to prevent traceback

2005-06-27  Don Allingham  <don@gramps-project.org>
	* src/PeopleView.py: fix on_get_iter on delete person

2005-06-27  Julio Sanchez  <jsanchez@users.sourceforge.net>
	* src/po/es.po: Translation fixes
	* src/GenericFilter.py: Do not attempt to translate user filters,
	fix a problem with filter names that contain non-ASCII characters

2005-06-26  Don Allingham  <don@gramps-project.org>
	* src/ImageSelect.py: allow the path variable to be editable
	* src/gramps.glade: allow the path variable to be editable
	* src/PeopleView.py: partial implementation of the alexrithm to
	select a new person after a person has been deleted
	* src/const.py.in: fix confidence display
	* src/ReadXML.py: prevent duplicate place names on import
	* src/ReadGedcom.py: prevent duplicate place names on import

2005-06-26  Julio Sanchez  <jsanchez@users.sourceforge.net>
	* src/GenericFilter.py: Fix uninitialized ancestor_cache in
	HasCommonAncestorWithFilterMatch, fix or-ing filters

2005-06-24  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/PeopleView.py (build_people_context_menu): Workaround to get a
	proper german translation.
	* srx/po/de.po: Updated

2005-06-24  Alexander Roitman  <shura@gramps-project.org>