@@ -715,12 +715,24 @@ class IndividualPage:
             self.doc.write_text(_("Siblings"))
             self.doc.end_paragraph()
     
-            self.doc.start_table("three","IndTable")
-        
+            self.doc.start_table("four","IndTable")
+            self.doc.start_row()
+            self.doc.start_cell("NormalCell")
+            self.doc.start_paragraph("Label")
+            self.doc.write_text(_("Siblings"))
+            self.doc.end_paragraph()
+            self.doc.end_cell()
+
+            self.doc.start_cell("NormalCell")
+            first = True
             for child_handle in all_sisters:
                 child = self.db.get_person_from_handle(child_handle)
-                self.doc.start_paragraph("Data")
                 name = child.get_primary_name().get_regular_name()
+                if first:
+                    self.doc.start_paragraph("Data")
+                    first = False
+                else:
+                    self.doc.write_text('\n')
                 if self.person.get_handle() == child_handle:
                     self.doc.write_text(name)
                 elif self.list.has_key(child_handle):
@@ -729,8 +741,12 @@ class IndividualPage:
                     self.doc.end_link()
                 else:
                     self.doc.write_text(name)
+            if not first:
                 self.doc.end_paragraph()
-                
+
+            self.doc.end_cell()
+            self.doc.end_row()
+            self.doc.end_table()    
 
 #------------------------------------------------------------------------
 #
