@@ -1,3 +1,7 @@
+2005-07-01  Alex Roitman  <shura@gramps-project.org>
+	* src/plugins/WebPage.py (write_sibling): Apply patch from bug #
+	1230430 at sf.net with minor tweaks.
+
 2005-06-29  Don Allingham  <don@gramps-project.org>
 	* src/GrampsDbBase.py: don't count_person for gender stats on 
 	add_person, since already done it commit_person
